fix: use java 15 collection api in sealed classes example